--- a/blogCretater_1_vue/vue_script_mode/index.html
+++ b/blogCretater_1_vue/vue_script_mode/index.html
@@ -15,7 +15,15 @@
     <script type="module">
         import { createApp, ref } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
 
-        createApp({
+        const root = {
+            template: "<h1>root component 생성</h1>"
+        };
+
+        const app = createApp(root); // createApp(component)
+        console.log(app)
+        app.mount('#app'); // component와 매칭
+        /*
+        createApp({ 
             setup() {
                 const message = ref('Hello Vue!')
                 return {
@@ -23,6 +31,8 @@
                 }
             }
         }).mount('#app')
+        */
+
     </script>
 
     <!-- 방식2 -->
