컴퍼넌트 계층화

--- a/blogCretater_1_vue/vue_script_mode/index.html
+++ b/blogCretater_1_vue/vue_script_mode/index.html
@@ -17,6 +17,7 @@
 
         const root = {
             template: `<h1>root component 생성</h1>
+            <!--기본 html 태그와 항상 겹치지 않는 태그이름 / 충돌발생 가능 -->
             <A></A>
             <B></B>
             <C></C>
