--- a/blogCretater_1_vue/vue_script_mode/ex_3_reactivity/index.html
+++ b/blogCretater_1_vue/vue_script_mode/ex_3_reactivity/index.html
@@ -16,7 +16,7 @@
       <h1>{{ proxy.msg }}</h1>
       `,
       setup() {
-        let proxy = reactive({ msg: "3초 뒤 변경됨" })
+        let proxy = reactive({ msg: "3초 뒤 변경됨" });
 
         console.log(proxy);
 
